chrome addr bar collapse fix

--- a/src/components/background.css
+++ b/src/components/background.css
@@ -1,12 +1,13 @@
 .background {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   z-index: -1;
   max-width: 1080px;
   margin: 0 auto;
   float: none;
   max-height: 1200px;
+  bottom: 0;
 }
 
 .background .rocket-container {
